[Issue]: Grid justify and align. [Root Cause]: NA [Solution]: NA [Card Number]: NA [Note]: NA

--- a/CSS Grid/style.css
+++ b/CSS Grid/style.css
@@ -7,9 +7,12 @@ body {
 #content {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(150px, auto);
   gap: 10px;
   max-width: 960px;
   margin: 0 auto;
+  /* align-items: start;
+  justify-items: start; */
 }
 
 #content div {
@@ -21,15 +24,17 @@ body {
   background: #777;
 }
 
-.nested {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
-  grid-column: span 3;
+.one {
+  justify-self: end;
+  align-self: end;
 }
 
-.nested p {
-  border: 1px solid #fff;
-  padding: 20px;
-  margin: 0;
+.two {
+  justify-self: center;
+  align-self: center;
+}
+
+.three {
+  justify-self: start;
+  align-self: start;
 }
